syntax = "proto3";
package buchain.exchange;

import "buchain/exchange/exchange_rate.proto";
// this line is used by starport scaffolding # proto/tx/import
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "bu-chain/x/exchange/types";

// Msg defines the Msg service.
service Msg {
  rpc ExchangeToken(MsgExchangeToken) returns (MsgExchangeTokenResponse);
  rpc CreateExchangeRate(MsgCreateExchangeRate) returns (MsgCreateExchangeRateResponse);
  rpc UpdateExchangeRate(MsgUpdateExchangeRate) returns (MsgUpdateExchangeRateResponse);
  rpc DeleteExchangeRate(MsgDeleteExchangeRate) returns (MsgDeleteExchangeRateResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgExchangeToken {
  string creator = 1;
  string receiver = 2;
  cosmos.base.v1beta1.Coin denom = 3 [(gogoproto.nullable) = false];
  string exchangeDenom = 4;
}

message MsgExchangeTokenResponse {
}

message MsgCreateExchangeRate {
  string creator = 1;
  string index = 2;

  string rate = 3;
}
message MsgCreateExchangeRateResponse {}

message MsgUpdateExchangeRate {
  string creator = 1;
  string index = 2;

  string rate = 3;
}
message MsgUpdateExchangeRateResponse {}

message MsgDeleteExchangeRate {
  string creator = 1;
  string index = 2;
}
message MsgDeleteExchangeRateResponse {}

// this line is used by starport scaffolding # proto/tx/message
